linux/libcmt/include/libcmt/abi.h

enum {
	CMT_WORD_LENGTH = 32,    /**< length of a evm word in bytes */
	CMT_ADDRESS_LENGTH = 20, /**< length of a evm address in bytes */
};
#define CMT_ABI_FUNSEL(A, B, C, D) \
	( ((uint32_t)(D) << 000) \
	| ((uint32_t)(C) << 010) \
	| ((uint32_t)(B) << 020) \
	| ((uint32_t)(A) << 030))
#define CMT_ABI_FUNSEL(A, B, C, D) \
	( ((uint32_t)(A) << 000) \
	| ((uint32_t)(B) << 010) \
	| ((uint32_t)(C) << 020) \
	| ((uint32_t)(D) << 030))
// put section ---------------------------------------------------------------

/** Create a function selector from an array of bytes
 * @param [in] funsel function selector bytes
 * @return
 * - function selector converted to big endian (as expected by EVM) */
uint32_t
cmt_abi_funsel(uint8_t a, uint8_t b, uint8_t c, uint8_t d);
/** Encode a function selector into the buffer @p me
 *
 * @param [in,out] me     a initialized buffer working as iterator
 * @param [in]     funsel function selector
 *
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 *
 * @note A function selector can be compute it with: @ref cmt_keccak_funsel.
 * It is always represented in big endian. */
int
cmt_abi_put_funsel(cmt_buf_t *me, uint32_t funsel);
/** Encode a unsigned integer of up to 32bytes of data into the buffer
 *
 * @param [in,out] me   a initialized buffer working as iterator
 * @param [in]     n    size of @p data in bytes
 * @param [in]     data poiter to a integer
 *
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 * - EDOM requested @p n is too large
 *
 * @code
 * ...
 * cmt_buf_t it = ...;
 * uint64_t x = UINT64_C(0xdeadbeef);
 * cmt_abi_put_uint(&it, sizeof x, &x);
 * ...
 * @endcode
 * @note This function takes care of endianess conversions */
int
cmt_abi_put_uint(cmt_buf_t *me, size_t n, const void *data);
/** Encode a bool into the buffer
 *
 * @param [in,out] me    a initialized buffer working as iterator
 * @param [in]     value boolean value
 *
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 *
 * @code
 * ...
 * cmt_buf_t it = ...;
 * cmt_abi_put_bool(&it, true);
 * ...
 * @endcode
 * @note This function takes care of endianess conversions */
int
cmt_abi_put_bool(cmt_buf_t *me, bool value);
/** Encode @p address (exacly @ref CMT_ADDRESS_LENGTH bytes) into the buffer
 *
 * @param [in,out] me      initialized buffer
 * @param [in]     address exactly @ref CMT_ADDRESS_LENGTH bytes
 *
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me */
int
cmt_abi_put_address(cmt_buf_t *me, const uint8_t address[CMT_ADDRESS_LENGTH]);
/** Encode the static part of @b bytes into the message,
 * used in conjunction with @ref cmt_abi_put_bytes_d
 *
 * @param [in,out] me     initialized buffer
 * @param [out]    offset initialize for @ref cmt_abi_put_bytes_d
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me */
int
cmt_abi_put_bytes_s(cmt_buf_t *me, cmt_buf_t *offset);
/** Encode the dynamic part of @b bytes into the message,
 * used in conjunction with @ref cmt_abi_put_bytes_d
 *
 * @param [in,out] me     initialized buffer
 * @param [in]     offset initialized from @ref cmt_abi_put_bytes_h
 * @param [in]     n      size of @b data
 * @param [in]     data   array of bytes
 * @param [in]     start  starting point for offset calculation (first byte after funsel)
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me */
int
cmt_abi_put_bytes_d(cmt_buf_t *me, cmt_buf_t *offset
                   ,size_t n, const void *data, const void *start);
/** Reserve @b n bytes of data from the buffer into @b res to be filled by the
 * caller
 *
 * @param [in,out] me     initialized buffer
 * @param [in]     n      amount of bytes to reserve
 * @param [out]    res    slice of bytes extracted from @p me
 * @param [in]     start  starting point for offset calculation (first byte after funsel)
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 *
 * @note @p me must outlive @p res.
 * Create a duplicate otherwise */
int
cmt_abi_reserve_bytes_d(cmt_buf_t *me, cmt_buf_t *of, size_t n, cmt_buf_t *out, const void *start);
// get section ---------------------------------------------------------------

/** Read the funsel without consuming it from the buffer @p me
 *
 * @param [in]     me     initialized buffer
 * @return
 * - The function selector
 *
 * @code
 * ...
 * if (cmt_buf_length(it) < 4)
 * 	return EXIT_FAILURE;
 * switch (cmt_abi_peek_funsel(it) {
 * case CMT_ABI_FUNSEL(...): // known type, try to parse it
 * case CMT_ABI_FUNSEL(...): // known type, try to parse it
 * default:
 * 	return EXIT_FAILURE;
 * }
 * @endcode
 *
 * @note user must ensure there are at least 4 bytes in the buffer.
 * This function will fail and return 0 if that is not the case. */
uint32_t
cmt_abi_peek_funsel(cmt_buf_t *me);
/** Consume funsel from the buffer @p me and ensure it matches @p expected_funsel
 *
 * @param [in,out] me       initialized buffer
 * @param [in]     expected expected function selector
 *
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 * - EBADMSG in case of a missmatch */
int
cmt_abi_check_funsel(cmt_buf_t *me, uint32_t expected);
/** Decode a unsigned integer of up to 32bytes from the buffer
 *
 * @param [in,out] me     initialized buffer
 * @param [in]     n      size of @p data in bytes
 * @param [out]    data   pointer to a integer
 *
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 * - EDOM    value won't fit into @p n bytes. */
int
cmt_abi_get_uint(cmt_buf_t *me, size_t n, void *data);
/** Consume and decode @b address from the buffer
 *
 * @param [in,out] me      initialized buffer
 * @param [out]    address exactly 20 bytes
 *
 * @return
 * - 0 success
 * - ENOBUFS requested size @b n is not available */
int
cmt_abi_get_address(cmt_buf_t *me, uint8_t address[CMT_ADDRESS_LENGTH]);
/** Consume and decode the offset @p of
 *
 * @param [in,out] me initialized buffer
 * @param [out]    of offset to @p bytes data, for use in conjunction with @ref cmt_abi_get_bytes_d
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me */
int
cmt_abi_get_bytes_s(cmt_buf_t *me, cmt_buf_t of[1]);
/** Decode @b bytes from the buffer by taking a pointer to its contents.
 *
 * @param [in]  start initialized buffer (from the start after funsel)
 * @param [out]    of    offset to @p bytes data
 * @param [out]    n     amount of data available in @b bytes
 * @param [out]    bytes memory range with contents
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 * @note @p of can be initialized by calling @ref cmt_abi_get_bytes_s */
int
cmt_abi_get_bytes_d(const cmt_buf_t *start, cmt_buf_t of[1], size_t *n, void **bytes);
/** Decode @b bytes from the buffer by taking a pointer to its contents.
 *
 * @param [in]  start initialized buffer (from the start after funsel)
 * @param [out] of    offset to @p bytes data
 * @param [out] n     amount of data available in @b bytes
 * @param [out] bytes memory range with contents
 * @return
 * - 0 success
 * - ENOBUFS no space left in @p me
 * @note @p of can be initialized by calling @ref cmt_abi_get_bytes_s */
int
cmt_abi_peek_bytes_d(const cmt_buf_t *start, cmt_buf_t of[1], cmt_buf_t *bytes);
// raw codec section --------------------------------------------------------

/** Encode @p n bytes of @p data into @p out (up to 32).
 *
 * @param [in]  n    size of @p data in bytes
 * @param [in]  data integer value to encode into @p out
 * @param [out] out  encoded result
 * @return
 * - 0    success
 * - EDOM @p n is too large. */
int
cmt_abi_encode_uint(size_t n, const void *data, uint8_t out[CMT_WORD_LENGTH]);
/** Encode @p n bytes of @p data into @p out (up to 32) in reverse order.
 *
 * @param [in]  n    size of @p data in bytes
 * @param [in]  data integer value to encode into @p out
 * @param [out] out  encoded result
 * @return
 * - 0    success
 * - EDOM @p n is too large.
 * @note use @ref cmt_abi_encode_uint instead */
int
cmt_abi_encode_uint_nr(size_t n, const uint8_t *data, uint8_t out[CMT_WORD_LENGTH]);