rollup-http/rollup-http-server/src/rollup/bindings.rs

extern "C" {
    #[doc = " Split a buffer in two, @b lhs with @b lhs_length bytes and @b rhs with the rest\n\n @param [in,out] me         initialized buffer\n @param [in]     lhs_length bytes in @b lhs\n @param [out]    lhs        left hand side\n @param [out]    rhs        right hand side\n\n @return\n - 0 success\n - negative value on error. -ENOBUFS when length(me) < lhs_length."]
    pub fn cmt_buf_split(
        me: *const cmt_buf_t,
        lhs_length: usize,
        lhs: *mut cmt_buf_t,
        rhs: *mut cmt_buf_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Length in bytes of @p me\n\n @param [in] me     initialized buffer\n\n @return\n - size in bytes"]
    pub fn cmt_buf_length(me: *const cmt_buf_t) -> usize;
}
extern "C" {
    #[doc = " Print the contents of @b me buffer to stdout\n\n @param [in] begin          start of memory region\n @param [in] end            end of memory region\n @param [in] bytes_per_line bytes per line (must be a power of 2)."]
    pub fn cmt_buf_xxd(
        begin: *mut ::std::os::raw::c_void,
        end: *mut ::std::os::raw::c_void,
        bytes_per_line: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " Take the substring @p x from @p xs start to the first @p , (comma).\n @param [out]    x           substring\n @param [in,out] xs          string (interator)\n\n @note @p x points inside @p xs, make a copy if it outlives @p xs."]
    pub fn cmt_buf_split_by_comma(x: *mut cmt_buf_t, xs: *mut cmt_buf_t) -> bool;
}
#[doc = "< length of a evm word in bytes"]
pub const CMT_WORD_LENGTH: _bindgen_ty_1 = 32;
#[doc = "< length of a evm address in bytes"]
pub const CMT_ADDRESS_LENGTH: _bindgen_ty_1 = 20;
pub type _bindgen_ty_1 = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " Create a function selector from an array of bytes\n @param [in] funsel function selector bytes\n @return\n - function selector converted to big endian (as expected by EVM)"]
    pub fn cmt_abi_funsel(a: u8, b: u8, c: u8, d: u8) -> u32;
}
extern "C" {
    #[doc = " Encode a function selector into the buffer @p me\n\n @param [in,out] me     a initialized buffer working as iterator\n @param [in]     funsel function selector\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n\n @note A function selector can be compute it with: @ref cmt_keccak_funsel.\n It is always represented in big endian."]
    pub fn cmt_abi_put_funsel(me: *mut cmt_buf_t, funsel: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode a unsigned integer of up to 32bytes of data into the buffer\n\n @param [in,out] me   a initialized buffer working as iterator\n @param [in]     n    size of @p data in bytes\n @param [in]     data poiter to a integer\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n - EDOM requested @p n is too large\n\n @code\n ...\n cmt_buf_t it = ...;\n uint64_t x = UINT64_C(0xdeadbeef);\n cmt_abi_put_uint(&it, sizeof x, &x);\n ...\n @endcode\n @note This function takes care of endianess conversions"]
    pub fn cmt_abi_put_uint(
        me: *mut cmt_buf_t,
        n: usize,
        data: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode a big-endian value of up to 32bytes of data into the buffer\n\n @param [in,out] me     a initialized buffer working as iterator\n @param [in]     length size of @p data in bytes\n @param [in]     data   poiter to a integer\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n - EDOM requested @p n is too large\n\n @code\n ...\n cmt_buf_t it = ...;\n uint8_t small[] = {\n     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x01,\n };\n cmt_abi_put_uint(&it, sizeof small, &small);\n ...\n uint8_t big[] = {\n     0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n };\n cmt_abi_put_uint(&it, sizeof big, &big);\n @endcode\n @note This function takes care of endianess conversions"]
    pub fn cmt_abi_put_uint_be(
        me: *mut cmt_buf_t,
        n: usize,
        data: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode a bool into the buffer\n\n @param [in,out] me    a initialized buffer working as iterator\n @param [in]     value boolean value\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n\n @code\n ...\n cmt_buf_t it = ...;\n cmt_abi_put_bool(&it, true);\n ...\n @endcode\n @note This function takes care of endianess conversions"]
    pub fn cmt_abi_put_bool(me: *mut cmt_buf_t, value: bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode @p address (exacly @ref CMT_ADDRESS_LENGTH bytes) into the buffer\n\n @param [in,out] me      initialized buffer\n @param [in]     address exactly @ref CMT_ADDRESS_LENGTH bytes\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me"]
    pub fn cmt_abi_put_address(me: *mut cmt_buf_t, address: *const u8) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode the static part of @b bytes into the message,\n used in conjunction with @ref cmt_abi_put_bytes_d\n\n @param [in,out] me     initialized buffer\n @param [out]    offset initialize for @ref cmt_abi_put_bytes_d\n @return\n - 0 success\n - ENOBUFS no space left in @p me"]
    pub fn cmt_abi_put_bytes_s(me: *mut cmt_buf_t, offset: *mut cmt_buf_t)
        -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode the dynamic part of @b bytes into the message,\n used in conjunction with @ref cmt_abi_put_bytes_d\n\n @param [in,out] me     initialized buffer\n @param [in]     offset initialized from @ref cmt_abi_put_bytes_h\n @param [in]     n      size of @b data\n @param [in]     data   array of bytes\n @param [in]     start  starting point for offset calculation (first byte after funsel)\n @return\n - 0 success\n - ENOBUFS no space left in @p me"]
    pub fn cmt_abi_put_bytes_d(
        me: *mut cmt_buf_t,
        offset: *mut cmt_buf_t,
        n: usize,
        data: *const ::std::os::raw::c_void,
        start: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Reserve @b n bytes of data from the buffer into @b res to be filled by the\n caller\n\n @param [in,out] me     initialized buffer\n @param [in]     n      amount of bytes to reserve\n @param [out]    res    slice of bytes extracted from @p me\n @param [in]     start  starting point for offset calculation (first byte after funsel)\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n\n @note @p me must outlive @p res.\n Create a duplicate otherwise"]
    pub fn cmt_abi_reserve_bytes_d(
        me: *mut cmt_buf_t,
        of: *mut cmt_buf_t,
        n: usize,
        out: *mut cmt_buf_t,
        start: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Read the funsel without consuming it from the buffer @p me\n\n @param [in]     me     initialized buffer\n @return\n - The function selector\n\n @code\n ...\n if (cmt_buf_length(it) < 4)\n \treturn EXIT_FAILURE;\n switch (cmt_abi_peek_funsel(it) {\n case CMT_ABI_FUNSEL(...): // known type, try to parse it\n case CMT_ABI_FUNSEL(...): // known type, try to parse it\n default:\n \treturn EXIT_FAILURE;\n }\n @endcode\n\n @note user must ensure there are at least 4 bytes in the buffer.\n This function will fail and return 0 if that is not the case."]
    pub fn cmt_abi_peek_funsel(me: *mut cmt_buf_t) -> u32;
}
extern "C" {
    #[doc = " Consume funsel from the buffer @p me and ensure it matches @p expected_funsel\n\n @param [in,out] me       initialized buffer\n @param [in]     expected expected function selector\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n - EBADMSG in case of a missmatch"]
    pub fn cmt_abi_check_funsel(me: *mut cmt_buf_t, expected: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Decode a unsigned integer of up to 32bytes from the buffer\n\n @param [in,out] me     initialized buffer\n @param [in]     n      size of @p data in bytes\n @param [out]    data   pointer to a integer\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n - EDOM    value won't fit into @p n bytes."]
    pub fn cmt_abi_get_uint(
        me: *mut cmt_buf_t,
        n: usize,
        data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Decode @p length big-endian bytes, up to 32, from the buffer into @p data\n\n @param [in,out] me     initialized buffer\n @param [in]     length size of @p data in bytes\n @param [out]    data   pointer to a integer\n\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n - EDOM    value won't fit into @p n bytes."]
    pub fn cmt_abi_get_uint_be(
        me: *mut cmt_buf_t,
        n: usize,
        data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Consume and decode @b address from the buffer\n\n @param [in,out] me      initialized buffer\n @param [out]    address exactly 20 bytes\n\n @return\n - 0 success\n - ENOBUFS requested size @b n is not available"]
    pub fn cmt_abi_get_address(me: *mut cmt_buf_t, address: *mut u8) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Consume and decode the offset @p of\n\n @param [in,out] me initialized buffer\n @param [out]    of offset to @p bytes data, for use in conjunction with @ref cmt_abi_get_bytes_d\n @return\n - 0 success\n - ENOBUFS no space left in @p me"]
    pub fn cmt_abi_get_bytes_s(me: *mut cmt_buf_t, of: *mut cmt_buf_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Decode @b bytes from the buffer by taking a pointer to its contents.\n\n @param [in]  start initialized buffer (from the start after funsel)\n @param [out]    of    offset to @p bytes data\n @param [out]    n     amount of data available in @b bytes\n @param [out]    bytes memory range with contents\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n @note @p of can be initialized by calling @ref cmt_abi_get_bytes_s"]
    pub fn cmt_abi_get_bytes_d(
        start: *const cmt_buf_t,
        of: *mut cmt_buf_t,
        n: *mut usize,
        bytes: *mut *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Decode @b bytes from the buffer by taking a pointer to its contents.\n\n @param [in]  start initialized buffer (from the start after funsel)\n @param [out] of    offset to @p bytes data\n @param [out] n     amount of data available in @b bytes\n @param [out] bytes memory range with contents\n @return\n - 0 success\n - ENOBUFS no space left in @p me\n @note @p of can be initialized by calling @ref cmt_abi_get_bytes_s"]
    pub fn cmt_abi_peek_bytes_d(
        start: *const cmt_buf_t,
        of: *mut cmt_buf_t,
        bytes: *mut cmt_buf_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode @p n bytes of @p data into @p out (up to 32).\n\n @param [in]  n    size of @p data in bytes\n @param [in]  data integer value to encode into @p out\n @param [out] out  encoded result\n @return\n - 0    success\n - EDOM @p n is too large."]
    pub fn cmt_abi_encode_uint(
        n: usize,
        data: *const ::std::os::raw::c_void,
        out: *mut u8,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Encode @p n bytes of @p data into @p out (up to 32) in reverse order.\n\n @param [in]  n    size of @p data in bytes\n @param [in]  data integer value to encode into @p out\n @param [out] out  encoded result\n @return\n - 0    success\n - EDOM @p n is too large.\n @note use @ref cmt_abi_encode_uint instead"]
    pub fn cmt_abi_encode_uint_nr(n: usize, data: *const u8, out: *mut u8)
        -> ::std::os::raw::c_int;
}
